Front Conversor Numérico

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ h2 {
     font-family: 'Roboto', sans-serif;
 }
 
-@media (max-width:700px) {
+/* @media (max-width:700px) {
     .brand-logo {
         font-size: 16pt !important;
     }
-}
+} */
 
 @media (min-width: 1000px){
     .card{
