--- a/conversor/css/main.css
+++ b/conversor/css/main.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 
 .containerBorder {
@@ -25,5 +26,18 @@
     width: 50%;
     height: 30px;
     text-align: center;
-    font-size: 13pt;
+    font-size: 14pt;
+}
+
+@media (min-width: 1025px){
+    .containerFlex{
+        padding-left: 30%;
+        padding-right: 30%;
+    }
+}
+
+@media (max-width:700px) {
+    .brand-logo {
+        font-size: 14pt !important;
+    }
 }
