--- a/eliminacao-gauss/css/styles.css
+++ b/eliminacao-gauss/css/styles.css
@@ -21,18 +21,55 @@
   font-size: 14pt;
 }
 
-#matrix {
+.matrix-table {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.matrix-show td{
+  padding: 15px;
+}
+
+.matrix {
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.operation-button {
+  margin-top: 30px;
+}
+
+#steps, .step {
   display: flex;
-  align-self: auto;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.matrix-table {
-  border-left: 2px solid black;
-  border-right: 2px solid black;
-  border-radius: 3px !important;
-  padding-left: 20px;
-  padding-right: 20px;
+.step-title {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.step-content {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+}
+
+.step-content .matrix {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 @media (min-width: 1025px) {
